# iowarp-runtime

./: .clangd  .clangd-test.cpp  .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile.distributed  Dockerfile.test  None  README.md  README_DOCKER_TESTS.md  build-deb.sh  chi_refresh_repo.py  docker-compose.distributed.yml  docker-compose.test.yml  env.sh  llm-chimod.md  pr.sh  preset.sh  requirements.txt  run-distributed-test.sh  run-tests-docker.sh  test_multiblock.cc
benchmark/: CMakeLists.txt  task_throughput_benchmark.cc  test_bdev_io.cc  test_bw.cc  test_io.cc  test_latency.cc  test_zlib.cc  wrp_run_thrpt_benchmark.cc
chimods/: CMakeLists.txt  README.md  chimaera_repo.yaml
chimods/MOD_NAME/: CMakeLists.txt  chimaera_mod.yaml
chimods/MOD_NAME/doc/: MOD_NAME.md
chimods/MOD_NAME/include/MOD_NAME/: MOD_NAME_client.h  MOD_NAME_runtime.h  MOD_NAME_tasks.h
chimods/MOD_NAME/src/: MOD_NAME_client.cc  MOD_NAME_runtime.cc
chimods/MOD_NAME/src/autogen/: MOD_NAME_lib_exec.cc
chimods/admin/: CMakeLists.txt  chimaera_mod.yaml
chimods/admin/doc/: admin.md
chimods/admin/include/admin/: admin_client.h  admin_runtime.h  admin_tasks.h
chimods/admin/src/: admin_client.cc  admin_runtime.cc
chimods/admin/src/autogen/: admin_lib_exec.cc
chimods/bdev/: CMakeLists.txt  chimaera_mod.yaml
chimods/bdev/doc/: bdev.md
chimods/bdev/include/bdev/: bdev_client.h  bdev_runtime.h  bdev_tasks.h
chimods/bdev/src/: bdev_client.cc  bdev_runtime.cc
chimods/bdev/src/autogen/: bdev_lib_exec.cc
src/: CMakeLists.txt  chimaera.cc  chimaera_client.cc  chimaera_malloc.cc  chimaera_malloc.h  chimaera_manager.cc  chimaera_monitor.py  chimaera_runtime.cc  chimaera_start_runtime.cc  chimaera_stat_runtime.cc  chimaera_stop_runtime.cc  comutex.cc  config_client.cc  config_manager.cc  config_server.cc  corwlock.cc  domain_query.cc  ipc_manager.cc  least_squares.py  module.cc  module_manager.cc  module_registry.cc  pool_manager.cc  pool_query.cc  python_wrapper.cc  queue_manager.cc  reinforce_worker.cc  task.cc  task_queue.cc  work_orchestrator.cc  worker.cc
src/api/: chimaera_client.cc  chimaera_runtime.cc
src/config/: config_client.cc  config_manager.cc  config_server.cc
src/ipc/: ipc_manager.cc
src/malloc/: CMakeLists.txt  chimaera_malloc.cc  chimaera_malloc.h
src/module_manager/: module_manager.cc
src/module_registry/: module.cc  module_queue.cc  module_registry.cc  task.cc
src/pool_manager/: pool_manager.cc
src/queue_manager/: queue_manager.cc
src/util/: CMakeLists.txt  chimaera_stat_runtime.cc
src/work_orchestrator/: comutex.cc  corwlock.cc  reinforce_worker.cc  work_orchestrator.cc  worker.cc
tasks/: CMakeLists.txt  chimaera_repo.yaml
tasks/MOD_NAME/: CMakeLists.txt
tasks/MOD_NAME/include/MOD_NAME/: MOD_NAME_client.h  MOD_NAME_lib_exec.h  MOD_NAME_methods.h  MOD_NAME_tasks.h
tasks/MOD_NAME/src/: CMakeLists.txt  MOD_NAME_client.cc  MOD_NAME_monitor.py  MOD_NAME_runtime.cc
tasks/TASK_NAME/include/TASK_NAME/: TASK_NAME.h  TASK_NAME_client.h  TASK_NAME_lib_exec.h  TASK_NAME_methods.h  TASK_NAME_methods.yaml  TASK_NAME_tasks.h
tasks/TASK_NAME/src/: CMakeLists.txt  CMakeLists.txt.backup  TASK_NAME.cc  TASK_NAME_client.cc  TASK_NAME_monitor.py  TASK_NAME_runtime.cc
tasks/bdev/: CMakeLists.txt
tasks/bdev/include/bdev/: bdev.h  bdev_client.h  bdev_lib_exec.h  bdev_methods.compiled.yaml  bdev_methods.h  bdev_methods.yaml  bdev_tasks.h
tasks/bdev/src/: CMakeLists.txt  CMakeLists.txt.backup  bdev.cc  bdev_client.cc  bdev_monitor.py  bdev_runtime.cc
tasks/chifs/include/chifs/: chifs.h  chifs_lib_exec.h  chifs_methods.h  chifs_methods.yaml  chifs_tasks.h  chifs_types.h
tasks/chifs/src/: CMakeLists.txt  chifs.cc
tasks/chimaera_admin/include/chimaera_admin/: chimaera_admin.h  chimaera_admin_client.h  chimaera_admin_lib_exec.h  chimaera_admin_methods.compiled.yaml  chimaera_admin_methods.h  chimaera_admin_methods.yaml  chimaera_admin_tasks.h
tasks/chimaera_admin/src/: CMakeLists.txt  CMakeLists.txt.backup  chimaera_admin.cc  chimaera_admin_client.cc  chimaera_admin_runtime.cc
tasks/remote_queue/: CMakeLists.txt
tasks/remote_queue/include/remote_queue/: remote_queue.h  remote_queue_client.h  remote_queue_lib_exec.h  remote_queue_methods.compiled.yaml  remote_queue_methods.h  remote_queue_methods.yaml  (+1 more)
tasks/remote_queue/src/: CMakeLists.txt  CMakeLists.txt.backup  remote_queue.cc  remote_queue_client.cc  remote_queue_runtime.cc
tasks/small_message/src/: CMakeLists.txt  CMakeLists.txt.backup  small_message.cc  small_message_client.cc  small_message_monitor.py  small_message_runtime.cc
tasks/worch_proc_round_robin/src/: CMakeLists.txt  CMakeLists.txt.backup  worch_proc_round_robin.cc  worch_proc_round_robin_client.cc  worch_proc_round_robin_runtime.cc
tasks/worch_queue_round_robin/src/: CMakeLists.txt  CMakeLists.txt.backup  worch_queue_round_robin.cc  worch_queue_round_robin_client.cc  worch_queue_round_robin_runtime.cc
test/unit/: CMakeLists.txt  README_task_archive_tests.md  basic_test.h  log_parser.py  main.cc  main_mpi.cc  test_bdev_chimod.cc  test_chimaera_runtime.cc  test_chimaera_runtime_simple.cc  test_compose.cc  test_comutex.cc  test_fire_and_forget.cc  test_flush_correctness.cc  test_ipc_allocate_buffer.cc  test_mod_name_debug.cc  test_save_load_task.cc  test_segfault_debug.cc  test_task_archive.cc  test_wait_functionality.cc  test_worker_fiber_pattern.cc
test/unit/boost/: CMakeLists.txt  test_boost.cc
test/unit/cuda/: CMakeLists.txt  test_cuda.cc
test/unit/distributed/: CMakeLists.txt  chimaera_distributed.yaml  docker-compose.yml  generate_hostfile.sh  run_distributed_test.sh  run_tests.sh  test_distributed_bdev.cc
test/unit/external-chimod/: CMakeLists.txt  chimaera_repo.yaml  simple_mod  test_simple_mod.cc
test/unit/ipc/: CMakeLists.txt  test_finalize.cc  test_ipc.cc  test_malloc.cc  test_serialize.cc  test_type_sizes.cc
test/unit/rocm/: CMakeLists.txt  test_rocm.cc
util/: CMakeLists.txt  chi_refresh_repo.cc  chimaera_compose.cc  chimaera_start_runtime.cc  chimaera_stop_runtime.cc
(+292 files in other folders)
