cmake_minimum_required(VERSION 3.25)
project(chimaera_modules)
if (NOT CHIMAERA_IS_MAIN_PROJECT)
  find_package(Chimaera CONFIG REQUIRED)
endif()

add_subdirectory(TASK_NAME)
add_subdirectory(bdev)
add_subdirectory(chimaera_admin)
add_subdirectory(remote_queue)
add_subdirectory(small_message)
add_subdirectory(worch_proc_round_robin)
add_subdirectory(worch_queue_round_robin)